Fix gallery styling on mobile (#26)

--- a/wp-content/themes/lavandre/assets/css/pages/product.pcss
+++ b/wp-content/themes/lavandre/assets/css/pages/product.pcss
@@ -241,9 +241,6 @@ form.cart {
 
 .product-detail__gallery__image-list {
     position: relative;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 1rem;
     margin: 1rem 0 0;
     padding: 0;
     list-style: none;
